fixed z-index of end screen

--- a/src/components/gameEnd/GameEnd.module.css
+++ b/src/components/gameEnd/GameEnd.module.css
@@ -13,6 +13,7 @@
     border-radius: 40px;
     height: fit-content;
     width: 500px;
+    z-index: 1;
     opacity: 95%;
     padding: 15px;
 }
